# Seiton

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  render.yaml
api-gateway/: .env.example  go.mod
api-gateway/cmd/: main.go
api-gateway/cmd/api/: main.go
api-gateway/cmd/mock-engine/: main.go
api-gateway/internal/client/: engine.go  vision.go
api-gateway/internal/handler/: pack.go
api-gateway/internal/model/: models.go
api-gateway/internal/service/: orchestrator.go
dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/components/: DigitalTwinCanvas.jsx  DigitalTwinScreen.jsx  HUD.jsx  IngressScreen.jsx  ProcessingScreen.jsx  ScrollStage.jsx
dashboard/src/components/canvas/: ContainerWireframe.jsx  InstancedBoxes.jsx  OverheadCrane.jsx  PhysicsMarker.jsx
optimization/: CMakeLists.txt
optimization/include/: engine.hpp  ep_math.hpp  sorter.hpp  types.hpp
optimization/src/: engine.cpp  ep_math.cpp  main.cpp  sorter.cpp
perception/: .env.example  app.py  config.py  requirements.txt
perception/utils/: vision_core.py
